--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -1,37 +1,9 @@
 import { Meta } from "@storybook/blocks";
-
-import Github from "./assets/github.svg";
-import Discord from "./assets/discord.svg";
-import Youtube from "./assets/youtube.svg";
-import Tutorials from "./assets/tutorials.svg";
-import Styling from "./assets/styling.png";
-import Context from "./assets/context.png";
-import Assets from "./assets/assets.png";
-import Docs from "./assets/docs.png";
-import Share from "./assets/share.png";
-import FigmaPlugin from "./assets/figma-plugin.png";
-import Testing from "./assets/testing.png";
-import Accessibility from "./assets/accessibility.png";
-import Theming from "./assets/theming.png";
-import AddonLibrary from "./assets/addon-library.png";
-
-export const RightArrow = () => <svg 
-    viewBox="0 0 14 14" 
-    width="8px" 
-    height="14px" 
-    style={{ 
-      marginLeft: '4px',
-      display: 'inline-block',
-      shapeRendering: 'inherit',
-      verticalAlign: 'middle',
-      fill: 'currentColor',
-      'path fill': 'currentColor'
-    }}
->
-  <path d="m11.1 7.35-5.5 5.5a.5.5 0 0 1-.7-.7L10.04 7 4.9 1.85a.5.5 0 1 1 .7-.7l5.5 5.5c.2.2.2.5 0 .7Z" />
-</svg>
+import { ArrowRight } from 'lucide-react'
 
 <Meta title="Configure your project" />
+
+export const placeholder = "https://placehold.co/600x400"
 
 <div className="sb-container">
   <div className='sb-section-title'>
@@ -42,7 +14,7 @@ export const RightArrow = () => <svg
   <div className="sb-section">
     <div className="sb-section-item">
       <img
-        src={Styling}
+        src={placeholder}
         alt="A wall of logos representing different styling technologies"
       />
       <h4 className="sb-section-item-heading">Add styling and CSS</h4>
@@ -50,11 +22,11 @@ export const RightArrow = () => <svg
       <a
         href="https://storybook.js.org/docs/configure/styling-and-css/?renderer=react"
         target="_blank"
-      >Learn more<RightArrow /></a>
+      >Learn more<ArrowRight /></a>
     </div>
     <div className="sb-section-item">
       <img
-        src={Context}
+        src={placeholder}
         alt="An abstraction representing the composition of data for a component"
       />
       <h4 className="sb-section-item-heading">Provide context and mocking</h4>
@@ -62,10 +34,10 @@ export const RightArrow = () => <svg
       <a
         href="https://storybook.js.org/docs/writing-stories/decorators/?renderer=react#context-for-mocking"
         target="_blank"
-      >Learn more<RightArrow /></a>
+      >Learn more<ArrowRight /></a>
     </div>
     <div className="sb-section-item">
-      <img src={Assets} alt="A representation of typography and image assets" />
+      <img src={placeholder} alt="A representation of typography and image assets" />
       <div>
         <h4 className="sb-section-item-heading">Load assets and resources</h4>
         <p className="sb-section-item-paragraph">To link static files (like fonts) to your projects and stories, use the
@@ -74,7 +46,7 @@ export const RightArrow = () => <svg
         <a
           href="https://storybook.js.org/docs/configure/images-and-assets/?renderer=react"
           target="_blank"
-        >Learn more<RightArrow /></a>
+        >Learn more<ArrowRight /></a>
       </div>
     </div>
   </div>
@@ -89,61 +61,61 @@ export const RightArrow = () => <svg
   <div className="sb-section">
     <div className="sb-features-grid">
       <div className="sb-grid-item">
-        <img src={Docs} alt="A screenshot showing the autodocs tag being set, pointing a docs page being generated" />
+        <img src={placeholder} alt="A screenshot showing the autodocs tag being set, pointing a docs page being generated" />
         <h4 className="sb-section-item-heading">Autodocs</h4>
         <p className="sb-section-item-paragraph">Auto-generate living,
           interactive reference documentation from your components and stories.</p>
         <a
           href="https://storybook.js.org/docs/writing-docs/autodocs/?renderer=react"
           target="_blank"
-        >Learn more<RightArrow /></a>
+        >Learn more<ArrowRight /></a>
       </div>
       <div className="sb-grid-item">
-        <img src={Share} alt="A browser window showing a Storybook being published to a chromatic.com URL" />
+        <img src={placeholder} alt="A browser window showing a Storybook being published to a chromatic.com URL" />
         <h4 className="sb-section-item-heading">Publish to Chromatic</h4>
         <p className="sb-section-item-paragraph">Publish your Storybook to review and collaborate with your entire team.</p>
         <a
           href="https://storybook.js.org/docs/sharing/publish-storybook/?renderer=react#publish-storybook-with-chromatic"
           target="_blank"
-        >Learn more<RightArrow /></a>
+        >Learn more<ArrowRight /></a>
       </div>
       <div className="sb-grid-item">
-        <img src={FigmaPlugin} alt="Windows showing the Storybook plugin in Figma" />
+        <img src={placeholder} alt="Windows showing the Storybook plugin in Figma" />
         <h4 className="sb-section-item-heading">Figma Plugin</h4>
         <p className="sb-section-item-paragraph">Embed your stories into Figma to cross-reference the design and live
           implementation in one place.</p>
         <a
           href="https://storybook.js.org/docs/sharing/design-integrations/?renderer=react#embed-storybook-in-figma-with-the-plugin"
           target="_blank"
-        >Learn more<RightArrow /></a>
+        >Learn more<ArrowRight /></a>
       </div>
       <div className="sb-grid-item">
-        <img src={Testing} alt="Screenshot of tests passing and failing" />
+        <img src={placeholder} alt="Screenshot of tests passing and failing" />
         <h4 className="sb-section-item-heading">Testing</h4>
         <p className="sb-section-item-paragraph">Use stories to test a component in all its variations, no matter how
           complex.</p>
         <a
           href="https://storybook.js.org/docs/writing-tests/?renderer=react"
           target="_blank"
-        >Learn more<RightArrow /></a>
+        >Learn more<ArrowRight /></a>
       </div>
       <div className="sb-grid-item">
-        <img src={Accessibility} alt="Screenshot of accessibility tests passing and failing" />
+        <img src={placeholder} alt="Screenshot of accessibility tests passing and failing" />
         <h4 className="sb-section-item-heading">Accessibility</h4>
         <p className="sb-section-item-paragraph">Automatically test your components for a11y issues as you develop.</p>
         <a
           href="https://storybook.js.org/docs/writing-tests/accessibility-testing/?renderer=react"
           target="_blank"
-        >Learn more<RightArrow /></a>
+        >Learn more<ArrowRight /></a>
       </div>
       <div className="sb-grid-item">
-        <img src={Theming} alt="Screenshot of Storybook in light and dark mode" />
+        <img src={placeholder} alt="Screenshot of Storybook in light and dark mode" />
         <h4 className="sb-section-item-heading">Theming</h4>
         <p className="sb-section-item-paragraph">Theme Storybook's UI to personalize it to your project.</p>
         <a
           href="https://storybook.js.org/docs/configure/theming/?renderer=react"
           target="_blank"
-        >Learn more<RightArrow /></a>
+        >Learn more<ArrowRight /></a>
       </div>
     </div>
   </div>
@@ -155,53 +127,53 @@ export const RightArrow = () => <svg
     <a
         href="https://storybook.js.org/addons/"
         target="_blank"
-      >Discover all addons<RightArrow /></a>
+      >Discover all addons<ArrowRight /></a>
   </div>
   <div className='sb-addon-img'>
-    <img src={AddonLibrary} alt="Integrate your tools with Storybook to connect workflows." />
+    <img src={placeholder} alt="Integrate your tools with Storybook to connect workflows." />
   </div>
 </div>
 
 <div className="sb-section sb-socials">
     <div className="sb-section-item">
-      <img src={Github} alt="Github logo" className="sb-explore-image"/>
+      <img src={placeholder} alt="Github logo" className="sb-explore-image"/>
       Join our contributors building the future of UI development.
 
       <a
         href="https://github.com/storybookjs/storybook"
         target="_blank"
-      >Star on GitHub<RightArrow /></a>
+      >Star on GitHub<ArrowRight /></a>
     </div>
     <div className="sb-section-item">
-      <img src={Discord} alt="Discord logo" className="sb-explore-image"/>
+      <img src={placeholder} alt="Discord logo" className="sb-explore-image"/>
       <div>
         Get support and chat with frontend developers.
 
         <a
           href="https://discord.gg/storybook"
           target="_blank"
-        >Join Discord server<RightArrow /></a>
+        >Join Discord server<ArrowRight /></a>
       </div>
     </div>
     <div className="sb-section-item">
-      <img src={Youtube} alt="Youtube logo" className="sb-explore-image"/>
+      <img src={placeholder} alt="Youtube logo" className="sb-explore-image"/>
       <div>
         Watch tutorials, feature previews and interviews.
 
         <a
           href="https://www.youtube.com/@chromaticui"
           target="_blank"
-        >Watch on YouTube<RightArrow /></a>
+        >Watch on YouTube<ArrowRight /></a>
       </div>
     </div>
     <div className="sb-section-item">
-      <img src={Tutorials} alt="A book" className="sb-explore-image"/>
+      <img src={placeholder} alt="A book" className="sb-explore-image"/>
       <p>Follow guided walkthroughs on for key workflows.</p>
 
       <a
           href="https://storybook.js.org/tutorials/"
           target="_blank"
-        >Discover tutorials<RightArrow /></a>
+        >Discover tutorials<ArrowRight /></a>
     </div>
 </div>
 
